# deviceCheckout

./: .gitignore  Bug.hs  Main.hs  Makefile  README  README.md  bugs.sql  bugsdb-haskell.cabal  deviceCheckout.cabal  rest-test.cabal
data/: bugs.sql  devices.sql
src/: CmdLine.hs  Database.hs  Main.hs  Routes.hs  Templates.hs  Types.hs  Utils.hs
test/: DocTest.hs
