name:          deviceCheckout
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          deviceCheckout
    hs-source-dirs: src
    main-is:        Main.hs
    other-modules:  Types, Templates, Database
    ghc-options:    -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns
                    -Wredundant-constraints -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    build-depends:  base   >= 4      && < 5
                  , scotty
                  , aeson
                  , text
                  , http-types
                  , sqlite-simple
                  , blaze-html
                  , mtl
                  , optparse-applicative
                  , unix

test-suite             doctests
    type:              exitcode-stdio-1.0
    main-is:           DocTest.hs
    hs-source-dirs:    test
    build-depends:     base
                     , doctest
                     , Glob
